--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -67,7 +67,7 @@
                                 </ngb-tab>
                                 <ngb-tab title="Degree">
                                     <ng-template ngbTabContent>
-                                        <p>Vidyalankar Institute or Technology</p>
+                                        <p>Vidyalankar Institute of Technology</p>
                                         <p>Wadala</p>
                                     </ng-template>
                                 </ngb-tab>
