--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="https://pass-generator.adsbaker.com/" title="A Unique ID/Passqord Generator made by me" >Unique Id Generator</a></li>
+                    <li><a href="http://pass-generator.adsbaker.com/" title="A Unique ID/Passqord Generator made by me" >Unique Id Generator</a></li>
                     
                 </ul>
             </nav>
